log/tools/include/uapi/asm/bitsperlong.h.log
commit 42fc2e9ef9603a7948aaa4ffd8dfb94b30294ad8
Author: Arnaldo Carvalho de Melo <acme@redhat.com>
Date:   Tue Aug 20 11:45:17 2019 -0300

    tools headers: Fixup bitsperlong per arch includes
    
    We were getting the file by luck, from one of the paths in -I, fix it to
    get it from the proper place:
    
      $ cd tools/include/uapi/asm/
      [acme@quaco asm]$ grep include bitsperlong.h
      #include "../../arch/x86/include/uapi/asm/bitsperlong.h"
      #include "../../arch/arm64/include/uapi/asm/bitsperlong.h"
      #include "../../arch/powerpc/include/uapi/asm/bitsperlong.h"
      #include "../../arch/s390/include/uapi/asm/bitsperlong.h"
      #include "../../arch/sparc/include/uapi/asm/bitsperlong.h"
      #include "../../arch/mips/include/uapi/asm/bitsperlong.h"
      #include "../../arch/ia64/include/uapi/asm/bitsperlong.h"
      #include "../../arch/riscv/include/uapi/asm/bitsperlong.h"
      #include "../../arch/alpha/include/uapi/asm/bitsperlong.h"
      #include <asm-generic/bitsperlong.h>
      $ ls -la ../../arch/x86/include/uapi/asm/bitsperlong.h
      ls: cannot access '../../arch/x86/include/uapi/asm/bitsperlong.h': No such file or directory
      $ ls -la ../../../arch/*/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 237 ../../../arch/alpha/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 841 ../../../arch/arm64/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 966 ../../../arch/hexagon/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 234 ../../../arch/ia64/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 100 ../../../arch/microblaze/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 244 ../../../arch/mips/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 352 ../../../arch/parisc/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 312 ../../../arch/powerpc/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 353 ../../../arch/riscv/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 292 ../../../arch/s390/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 323 ../../../arch/sparc/include/uapi/asm/bitsperlong.h
      -rw-rw-r--. 1 320 ../../../arch/x86/include/uapi/asm/bitsperlong.h
      $
    
    Found while fixing some other problem, before it was escaping the
    tools/ chroot and using stuff in the kernel sources:
    
        CC       /tmp/build/perf/util/find_bit.o
    In file included from /git/linux/tools/include/../../arch/x86/include/uapi/asm/bitsperlong.h:11,
                     from /git/linux/tools/include/uapi/asm/bitsperlong.h:3,
                     from /git/linux/tools/include/linux/bits.h:6,
                     from /git/linux/tools/include/linux/bitops.h:13,
                     from ../lib/find_bit.c:17:
    
      # cd /git/linux/tools/include/../../arch/x86/include/uapi/asm/
      # pwd
      /git/linux/arch/x86/include/uapi/asm
      #
    
    Now it is getting the one we want it to, i.e. the one inside tools/:
    
        CC       /tmp/build/perf/util/find_bit.o
      In file included from /git/linux/tools/arch/x86/include/uapi/asm/bitsperlong.h:11,
                       from /git/linux/tools/include/linux/bits.h:6,
                       from /git/linux/tools/include/linux/bitops.h:13,
    
    Cc: Adrian Hunter <adrian.hunter@intel.com>
    Cc: Jiri Olsa <jolsa@kernel.org>
    Cc: Namhyung Kim <namhyung@kernel.org>
    Link: https://lkml.kernel.org/n/tip-8f8cfqywmf6jk8a3ucr0ixhu@git.kernel.org
    Signed-off-by: Arnaldo Carvalho de Melo <acme@redhat.com>

diff --git a/tools/include/uapi/asm/bitsperlong.h b/tools/include/uapi/asm/bitsperlong.h
index 57aaeaf8e192..edba4d93e9e6 100644
--- a/tools/include/uapi/asm/bitsperlong.h
+++ b/tools/include/uapi/asm/bitsperlong.h
@@ -1,22 +1,22 @@
 /* SPDX-License-Identifier: GPL-2.0 */
 #if defined(__i386__) || defined(__x86_64__)
-#include "../../arch/x86/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/x86/include/uapi/asm/bitsperlong.h"
 #elif defined(__aarch64__)
-#include "../../arch/arm64/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/arm64/include/uapi/asm/bitsperlong.h"
 #elif defined(__powerpc__)
-#include "../../arch/powerpc/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/powerpc/include/uapi/asm/bitsperlong.h"
 #elif defined(__s390__)
-#include "../../arch/s390/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/s390/include/uapi/asm/bitsperlong.h"
 #elif defined(__sparc__)
-#include "../../arch/sparc/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/sparc/include/uapi/asm/bitsperlong.h"
 #elif defined(__mips__)
-#include "../../arch/mips/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/mips/include/uapi/asm/bitsperlong.h"
 #elif defined(__ia64__)
-#include "../../arch/ia64/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/ia64/include/uapi/asm/bitsperlong.h"
 #elif defined(__riscv)
-#include "../../arch/riscv/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/riscv/include/uapi/asm/bitsperlong.h"
 #elif defined(__alpha__)
-#include "../../arch/alpha/include/uapi/asm/bitsperlong.h"
+#include "../../../arch/alpha/include/uapi/asm/bitsperlong.h"
 #else
 #include <asm-generic/bitsperlong.h>
 #endif

commit 842fc0f5dc5c9f9bd91f891554996d903c40cf35
Author: Bob Tracy <rct@frus.com>
Date:   Mon Jan 21 21:09:14 2019 -0800

    tools uapi: fix Alpha support
    
    Cc: stable@vger.kernel.org # v4.18+
    Signed-off-by: Bob Tracy <rct@frus.com>
    Signed-off-by: Matt Turner <mattst88@gmail.com>

diff --git a/tools/include/uapi/asm/bitsperlong.h b/tools/include/uapi/asm/bitsperlong.h
index fd92ce8388fc..57aaeaf8e192 100644
--- a/tools/include/uapi/asm/bitsperlong.h
+++ b/tools/include/uapi/asm/bitsperlong.h
@@ -15,6 +15,8 @@
 #include "../../arch/ia64/include/uapi/asm/bitsperlong.h"
 #elif defined(__riscv)
 #include "../../arch/riscv/include/uapi/asm/bitsperlong.h"
+#elif defined(__alpha__)
+#include "../../arch/alpha/include/uapi/asm/bitsperlong.h"
 #else
 #include <asm-generic/bitsperlong.h>
 #endif

commit d0df00e30e4bf9bc27ddbd092ad683ff6121b360
Author: Aurelien Jarno <aurelien@aurel32.net>
Date:   Tue Dec 25 15:46:24 2018 +0100

    tools uapi: fix RISC-V 64-bit support
    
    The BPF library is not built on 64-bit RISC-V, as the BPF feature is
    not detected. Looking more in details, feature/test-bpf.c fails to build
    with the following error:
    
    | In file included from /tmp/linux-4.19.12/tools/include/uapi/asm/bitsperlong.h:17,
    |                  from /tmp/linux-4.19.12/tools/include/uapi/asm-generic/unistd.h:2,
    |                  from /usr/include/riscv64-linux-gnu/asm/unistd.h:1,
    |                  from test-bpf.c:2:
    | /tmp/linux-4.19.12/tools/include/asm-generic/bitsperlong.h:14:2: error: #error Inconsistent word size. Check asm/bitsperlong.h
    |  #error Inconsistent word size. Check asm/bitsperlong.h
    |   ^~~~~
    
    The UAPI from the tools directory is missing RISC-V support, therefore
    bitsperlong.h from asm-generic is used, defaulting to 32 bits.
    
    Fix that by adding tools/arch/riscv/include/uapi/asm/bitsperlong.h as
    a copy of arch/riscv/include/uapi/asm/bitsperlong.h and by updating
    tools/include/uapi/asm/bitsperlong.h.
    
    Signed-off-by: Aurelien Jarno <aurelien@aurel32.net>
    Signed-off-by: Palmer Dabbelt <palmer@sifive.com>

diff --git a/tools/include/uapi/asm/bitsperlong.h b/tools/include/uapi/asm/bitsperlong.h
index 8dd6aefdafa4..fd92ce8388fc 100644
--- a/tools/include/uapi/asm/bitsperlong.h
+++ b/tools/include/uapi/asm/bitsperlong.h
@@ -13,6 +13,8 @@
 #include "../../arch/mips/include/uapi/asm/bitsperlong.h"
 #elif defined(__ia64__)
 #include "../../arch/ia64/include/uapi/asm/bitsperlong.h"
+#elif defined(__riscv)
+#include "../../arch/riscv/include/uapi/asm/bitsperlong.h"
 #else
 #include <asm-generic/bitsperlong.h>
 #endif

commit cd65cd95128781ca59d06611270fcbd9b4a7cf8d
Author: Sirio Balmelli <sirio@b-ad.ch>
Date:   Tue May 8 15:36:12 2018 +0200

    selftests/bpf: add architecture-agnostic headers
    
    The BPF selftests fail to build with missing headers
    'asm/bitsperlong.h' and 'asm/errno.h'.
    
    These already exist in 'tools/arch/[arch]/include';
    add architecture-agnostic header files in 'tools/include/uapi'
    to reference them.
    
    Signed-off-by: Sirio Balmelli <sirio@b-ad.ch>
    Signed-off-by: Daniel Borkmann <daniel@iogearbox.net>

diff --git a/tools/include/uapi/asm/bitsperlong.h b/tools/include/uapi/asm/bitsperlong.h
new file mode 100644
index 000000000000..8dd6aefdafa4
--- /dev/null
+++ b/tools/include/uapi/asm/bitsperlong.h
@@ -0,0 +1,18 @@
+/* SPDX-License-Identifier: GPL-2.0 */
+#if defined(__i386__) || defined(__x86_64__)
+#include "../../arch/x86/include/uapi/asm/bitsperlong.h"
+#elif defined(__aarch64__)
+#include "../../arch/arm64/include/uapi/asm/bitsperlong.h"
+#elif defined(__powerpc__)
+#include "../../arch/powerpc/include/uapi/asm/bitsperlong.h"
+#elif defined(__s390__)
+#include "../../arch/s390/include/uapi/asm/bitsperlong.h"
+#elif defined(__sparc__)
+#include "../../arch/sparc/include/uapi/asm/bitsperlong.h"
+#elif defined(__mips__)
+#include "../../arch/mips/include/uapi/asm/bitsperlong.h"
+#elif defined(__ia64__)
+#include "../../arch/ia64/include/uapi/asm/bitsperlong.h"
+#else
+#include <asm-generic/bitsperlong.h>
+#endif
